--- a/index.html
+++ b/index.html
@@ -127,24 +127,14 @@
 
 </div>
 
-    <!-- <h2></h2>
-    <section class="first-grid-container">
-      <div id="grid1">
-        <div class="cake"></div>
-        <div class="card-content">
-          <h5>Tårtor</h5>
-          <a href="#">Läs mer</a>
-        </div>
-      </div>
-
-    </section> -->
-
   <h2 id="departments">Collection Areas</h2>
+
   <!-- Met departments -->
   <div class="depWrapper">
   <div id="depContainer"></div>
   </div>
 
+  <!-- Chart -->
   <h2 id="chart">Collection overview</h2>
   <div class="chart">
     <canvas id="myChart"></canvas>
@@ -171,7 +161,7 @@
         </span>
       </div>
       <div id="footer3">
-        <p>©<span id="date"></span> The Metropolitan Museum of Art. All rights reserved.</p></div>
+        <p>The Met logo & ©<span id="date"></span> The Metropolitan Museum of Art.</p></div>
     </div>
   </footer>
 
