--- a/index.html
+++ b/index.html
@@ -71,47 +71,24 @@
   <a class="next" onclick='plusSlides(1)'>&#10095;</a>
 
   <div class="hero-content">
-    <h1 id="hero-headline">Browse Met's public domain collection</h1>
+    <h1 id="hero-headline">Browse The Met's public domain collection</h1>
+    <h2 id="hero-text">Access to The Metropolitan Museum of Art's online collection including publicly-available high-resolution images.</h2>
   </div>
 
   <div class="mySlides fade">
-    <div id="slideOne" alt="1"></div>
-    <div class="textSlide">
-      <a href="https://www.metmuseum.org/art/collection/search/436535">
-      <p class="titleSlide">Wheat Field with Cypresses</p>
-      <p>1889, Vincent van Gogh </p>
-      </a>
-    </div>
+    <div id="slideTextOne"><!--Info slide number one--> </div>
   </div>
 
   <div class="mySlides fade">
-    <div id="slideTwo" alt="2"></div>
-    <div class="textSlide">
-      <a href="https://www.metmuseum.org/art/collection/search/12019">
-      <p class="titleSlide">Victory</p>
-      <p>1892-1903, Augustus Saint-Gaudens</p>
-      </a>
-    </div>
+    <div id="slideTextTwo"><!--Info slide number two--> </div>
   </div>
 
   <div class="mySlides fade">
-    <div id="slideThree" alt="3"></div>
-    <div class="textSlide">
-      <a href="https://www.metmuseum.org/art/collection/search/10154">
-      <p class="titleSlide">The Rocky Mountains, Lander's Peak</p>
-      <p>1863, Albert Bierstadt</p>
-      </a>
-    </div>
+    <div id="slideTextThree"><!--Info slide number three--> </div>
   </div>
 
   <div class="mySlides fade">
-    <div id="slideFour" alt="4"></div>
-    <div class="textSlide">
-      <a href="https://www.metmuseum.org/art/collection/search/17139">
-      <p class="titleSlide">Eagle</p>
-      <p>1809-11, William Rush</p>
-      </a>
-    </div>
+    <div id="slideTextFour"><!--Info slide number four--> </div>
   </div>
 
   </div>
@@ -135,29 +112,29 @@
   </div>
 
   <!-- Chart -->
+<div class="chartContent">
+
   <h2 id="chart">Collection overview</h2>
   <div class="chart">
     <canvas id="myChart"></canvas>
   </div>
 
+  </div>
+
   </main>
 
-
-  <section class="socials">
-    <div><h2>Socials</h2></div>
-  </section>
 
   <!--   FOOTER    -->
   <footer>
     <div class="footer-container">
       <div id="footer1">
-        <h3>...</h3>
+        <h3>What's public domain?</h3>
         <span class="footer-text">
 
         </span>
       </div>
       <div id="footer2">
-
+        <p>...</p>
         </span>
       </div>
       <div id="footer3">
