--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
               <a href="#home" class="scroll-link">Home</a>
             </li>
             <li>
-              <a href="#departments" class="scroll-link">Departments</a>
+              <a href="#departments" class="scroll-link">Collection Areas</a>
             </li>
             <li>
-              <a href="#chart" class="scroll-link">Overview</a>
+              <a href="#chart" class="scroll-link">Collection Overview</a>
             </li>
             <li>
               <a href="cities.html" class="scroll-link">Cities</a>
@@ -54,10 +54,10 @@
               <a href="#home" class="scroll-link">Home</a>
             </li>
             <li>
-              <a href="#departments" class="scroll-link">Departments</a>
+              <a href="#departments" class="scroll-link">Collection Areas</a>
             </li>
             <li>
-              <a href="#chart" class="scroll-link">Overview</a>
+              <a href="#chart" class="scroll-link">Collection Overview</a>
             </li>
             <li>
               <a href="cities.html" class="scroll-link">Cities</a>
@@ -93,7 +93,7 @@
 
   </div>
 </div>
-<br>
+<br> <!-- -->
 
 <div class="dotContainer">
   <span class="dot" onclick='currentSlide(1)'></span>
@@ -127,18 +127,24 @@
   <!--   FOOTER    -->
   <footer>
     <div class="footer-container">
-      <div id="footer1">
-        <h3>What's public domain?</h3>
-        <span class="footer-text">
 
-        </span>
+      <div id="footer1">
+        <h3>What is public domain?</h3>
+        <p>The public domain (PD) consists of all the creative work to which no exclusive intellectual property rights apply.</p>
+        <p>Those rights may have expired, been forfeited, expressly waived, or may be inapplicable. Because those rights have expired, anyone can legally use or reference those works without permission. (<a href="https://en.wikipedia.org/wiki/Public_domain" target="_blank">Wikipedia</a>)</p>
       </div>
+
       <div id="footer2">
-        <p>...</p>
-        </span>
+        <ul>
+          <li><h3>Links</h3></li>
+          <li><a href="https://www.metmuseum.org/art/collection/search?department=8" target="_blank">The Met museum</a></li>
+          <li><p><a href="https://metmuseum.github.io/" target="_blank">The Metropolitan Museum of Art Collection API</a></p></li>
+          <li></li>
+        </ul>
       </div>
+
       <div id="footer3">
-        <p>The Met logo & ©<span id="date"></span> The Metropolitan Museum of Art.</p></div>
+        <p>This page ©<span id="date"></span> Mel Gonzalez.</p></div>
     </div>
   </footer>
 
